Feat : 20241220 부경 경기장 전체 일정 XML 파일 업로드

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,8 @@ Icon
 .VolumeIcon.icns
 .com.apple.timemachine.donotpresent
 .env
+un_used_code.ipynb
+
 # Directories potentially created on remote AFP share
 .AppleDB
 .AppleDesktop
